--- a/README.me
+++ b/README.me
@@ -1,1 +1,16 @@
-# ChromeExt
+#ChromeBee - a just for fun
+
+Changes your cursor to a flower and provides you a pet Bee!
+
+Hover over some <a > tags and produce some pollen.
+
+Click to make the bee fly as he chases the flower and collect pollen on the way!
+
+
+Head over to the Chome extension tab > manage extensions
+Turn on Developer mode
+Load Unpacked and select the file location in which you the manifest.json is saved.
+
+Turn on the extension and do no work.
+
+
